--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,16 +10,20 @@
     <div class="container">
       <h1>Simple Shop Order</h1>
 
+      <!-- LOGIN -->
       <div id="login-view">
         <h2>Login (Email OTP)</h2>
+
         <div class="form-row">
           <label>Name</label>
           <input id="name" type="text" />
         </div>
+
         <div class="form-row">
           <label>Email</label>
           <input id="email" type="email" />
         </div>
+
         <div class="form-row">
           <button id="send-otp">Send OTP</button>
         </div>
@@ -29,6 +33,7 @@
             <label>Enter OTP</label>
             <input id="otp" type="text" />
           </div>
+
           <div class="form-row">
             <button id="verify-otp">Verify OTP</button>
           </div>
@@ -37,36 +42,54 @@
         <div id="login-msg" class="msg"></div>
       </div>
 
+      <!-- ORDER (hidden before login) -->
       <div id="order-view" style="display:none;">
         <h2>Place Order</h2>
+
         <div class="form-row">
           <label>Company</label>
           <select id="company-select"></select>
         </div>
+
         <div class="form-row">
           <label>Product</label>
           <select id="product-select"></select>
         </div>
+
         <div class="form-row">
           <label>MRP</label>
           <select id="mrp-select"></select>
         </div>
+
         <div class="form-row">
           <label>Quantity</label>
           <input id="quantity" type="number" min="1" value="1" />
         </div>
+
         <div class="form-row">
           <button id="add-to-cart">Add to Cart</button>
         </div>
 
         <h3>Cart</h3>
+
         <table id="cart-table">
-          <thead><tr><th>Company</th><th>Product</th><th>MRP</th><th>Qty</th><th>Line</th></tr></thead>
+          <thead>
+            <tr>
+              <th>Company</th>
+              <th>Product</th>
+              <th>MRP</th>
+              <th>Qty</th>
+              <th>Line</th>
+            </tr>
+          </thead>
           <tbody></tbody>
         </table>
+
         <div class="form-row">
-          <strong>Grand Total: </strong><span id="grand-total">0</span>
+          <strong>Grand Total: </strong>
+          <span id="grand-total">0</span>
         </div>
+
         <div class="form-row">
           <button id="place-order">Place Order</button>
         </div>
@@ -75,98 +98,11 @@
       </div>
 
       <div id="warn" class="warning">
-        <strong>Warning:</strong> To send emails you must set SENDGRID_API_KEY and SHOP_OWNER_EMAIL in your backend environment.
+        <strong>Warning:</strong>
+        To send emails you must set SENDGRID_API_KEY and SHOP_OWNER_EMAIL in your backend environment.
       </div>
     </div>
 
     <script src="app.js"></script>
   </body>
-</html><<<<<<< HEAD
-
-        <div class="form-row">
-          <label>Company</label>
-          <select id="company-select"></select>
-        </div>
-        <div class="form-row">
-          <label>Product</label>
-          <select id="product-select"></select>
-        </div>
-        <div class="form-row">
-          <label>MRP</label>
-          <select id="mrp-select"></select>
-        </div>
-        <div class="form-row">
-          <label>Quantity</label>
-          <input id="quantity" type="number" min="1" value="1" />
-        </div>
-        <div class="form-row">
-          <button id="add-to-cart">Add to Cart</button>
-        </div>
-
-        <h3>Cart</h3>
-        <table id="cart-table">
-          <thead><tr><th>Company</th><th>Product</th><th>MRP</th><th>Qty</th><th>Line</th></tr></thead>
-          <tbody></tbody>
-        </table>
-        <div class="form-row">
-          <strong>Grand Total: </strong><span id="grand-total">0</span>
-        </div>
-        <div class="form-row">
-          <button id="place-order">Place Order</button>
-        </div>
-
-        <div id="order-msg" class="msg"></div>
-      </div>
-
-      <div id="warn" class="warning">
-        <strong>Warning:</strong> To send emails you must set Gmail credentials in backend/.env (see README).
-      </div>
-
-    <script src="app.js"></script>
-  </body>
 </html>
-=======
-
-        <div class="form-row">
-          <label>Company</label>
-          <select id="company-select"></select>
-        </div>
-        <div class="form-row">
-          <label>Product</label>
-          <select id="product-select"></select>
-        </div>
-        <div class="form-row">
-          <label>MRP</label>
-          <select id="mrp-select"></select>
-        </div>
-        <div class="form-row">
-          <label>Quantity</label>
-          <input id="quantity" type="number" min="1" value="1" />
-        </div>
-        <div class="form-row">
-          <button id="add-to-cart">Add to Cart</button>
-        </div>
-
-        <h3>Cart</h3>
-        <table id="cart-table">
-          <thead><tr><th>Company</th><th>Product</th><th>MRP</th><th>Qty</th><th>Line</th></tr></thead>
-          <tbody></tbody>
-        </table>
-        <div class="form-row">
-          <strong>Grand Total: </strong><span id="grand-total">0</span>
-        </div>
-        <div class="form-row">
-          <button id="place-order">Place Order</button>
-        </div>
-
-        <div id="order-msg" class="msg"></div>
-      </div>
-
-      <div id="warn" class="warning">
-        <strong>Warning:</strong> To send emails you must set Gmail credentials in backend/.env (see README).
-      </div>
-
-    <script src="app.js"></script>
-  </body>
-</html>
->>>>>>> 2cc4507 (Backup all local files before syncing with remote)
